# Operating_System_Benchmark

./: .gitignore  .project  README.md  build.sh  build_all.sh  clean_all.sh  run.sh  run_all.sh
cpu/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.old  cmake_install.cmake  cpu_measurements.c  cpu_measurements.h  main.c  procedure_call.c  procedure_call.h  run.sh  syscall.c
cpu/inc/: process.h  syscall.h  threads.h  utils.h
cpu/src/: main.c  procedure_call.c  process.c  process.h  syscall.c  threads.c  utils.c  utils.h
fs/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  build.sh  cmake_install.cmake  create_files.py  create_large.sh  fs_con.sh  generate_files.py  plot_cache.py  plot_rand.py  plot_remote.py  plot_seq_rand.py  run.sh
fs/inc/: utils.h
fs/src/: file_read.c  fs.c  fs_cache.c  fs_contention.c  fs_seq_rand.c  utils.c
mem/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  build.sh  cmake_install.cmake  run.sh
mem/inc/: mem.h  utils.h
mem/src/: mem.c
network/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run.sh
network/inc/: client_connection.h  util.h
network/src/: bandwidth_client.c  bandwidth_server.c  client_connection.c  main.c  rtt_client.c  rtt_server.c  server_connection.c  util.c
plotting/: mem_latency.py  plot.py
